Moved a few problems from 5.5 (Substitution) that don't belong there to the appropriate sections (for the next time the books are compiled)
Moved a few problems from 5.5 (Substitution) that don't belong there to the appropriate sections (for the next time the books are compiled)

--- a/exercises/06_03_exset_01.tex
+++ b/exercises/06_03_exset_01.tex
@@ -20,6 +20,7 @@
 \exinput{exercises/06_03_ex_16}
 \exinput{exercises/06_03_ex_16a}
 \exinput{exercises/06_03_ex_16b}
+\exinput{exercises/06_01_ex_27}
 \exinput{exercises/06_03_ex_17}
 \exinput{exercises/06_03_ex_18}
 \exinput{exercises/06_03_ex_19}
