--- a/exercises/06_01_exset_02.tex
+++ b/exercises/06_01_exset_02.tex
@@ -6,7 +6,7 @@
 \exinput{exercises/06_01_ex_16}
 \exinput{exercises/06_01_ex_22}
 \exinput{exercises/06_01_ex_25}
-\exinput{exercises/06_01_ex_27}
+%\exinput{exercises/06_01_ex_27}
 \exinput{exercises/06_01_ex_82}
 \exinput{exercises/06_01_ex_83}
 \exinput{exercises/06_01_ex_85}
