--- a/exercises/06_01_exset_05.tex
+++ b/exercises/06_01_exset_05.tex
@@ -1,7 +1,7 @@
 {\noindent In Exercises}
 {, use Substitution to evaluate the indefinite integral involving rational functions.}
-\exinput{exercises/06_01_ex_40}
-\exinput{exercises/06_01_ex_41}
+%\exinput{exercises/06_01_ex_40}
+%\exinput{exercises/06_01_ex_41}
 \exinput{exercises/06_01_ex_42}
 \exinput{exercises/06_01_ex_43}
 \exinput{exercises/06_01_ex_44}
