--- a/exercises/06_03_exercises.tex
+++ b/exercises/06_03_exercises.tex
@@ -4,7 +4,7 @@
 \exinput{exercises/06_03_ex_03}
 \printproblems
 \exsetinput{exercises/06_03_exset_01}
-\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
+%\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/06_03_exset_02}
 \exsetinput{exercises/06_03_exset_03}
 %\printreview
