--- a/exercises/02_04_exercises.tex
+++ b/exercises/02_04_exercises.tex
@@ -14,6 +14,7 @@
 \exsetinput{exercises/02_04_exset_02}
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/02_04_exset_03}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/02_04_exset_08}
 \exsetinput{exercises/02_04_exset_04}
 \exsetinput{exercises/02_04_exset_05}
