--- a/exercises/02_04_exset_02.tex
+++ b/exercises/02_04_exset_02.tex
@@ -12,3 +12,4 @@
 \exinput{exercises/02_05_ex_21x}
 \exinput{exercises/02_04_ex_13}
 \exinput{exercises/02_04_ex_14}
+\exinput{exercises/02_04_ex_15}
