--- a/exercises/06_02_exset_03.tex
+++ b/exercises/06_02_exset_03.tex
@@ -6,6 +6,7 @@
 \exinput{exercises/06_02_ex_44}
 \exinput{exercises/06_02_ex_45}
 \exinput{exercises/06_02_ex_46}
+\exinput{exercises/06_02_ex_59}
 \exinput{exercises/06_02_ex_47}
 \exinput{exercises/06_02_ex_48}
 \exinput{exercises/06_02_ex_49}
