Added 3 problems to 11.3

--- a/exercises/11_03_ex_07.tex
+++ b/exercises/11_03_ex_07.tex
@@ -1,5 +1,10 @@
 {$\vrt = \la 3t^2-2t+1, -t^2+t+14\ra$
 }
-{
-$\vvt = \la 6t-2,-2t+1\ra$, $\vat = \la6,-2 \ra$}
+{\begin{enumerate}
+\item $\vvt = \la 6t-2,-2t+1\ra$
+\item $\vat = \la6,-2 \ra$
+\item $\vvt \cdot \vat = 40t-14$
+\item The speed is not constant.
+\end{enumerate}
+}
 
