--- a/exercises/11_03_ex_08.tex
+++ b/exercises/11_03_ex_08.tex
@@ -1,5 +1,10 @@
 {$\vrt = \la \cos t,\sin t\ra$
 }
-{
-$\vvt = \la -\sin t, \cos t\ra$, $\vat = \la -\cos t, -\sin t \ra$}
+{\begin{enumerate}
+\item $\vvt = \la -\sin t, \cos t\ra$
+\item $\vat = \la -\cos t, -\sin t \ra$
+\item $\vvt \cdot \vat = 0$
+\item The speed is constant.  The speed is 1.
+\end{enumerate}
+}
 
