--- a/exercises/11_03_ex_09.tex
+++ b/exercises/11_03_ex_09.tex
@@ -1,5 +1,10 @@
 {$\vrt = \la t/10,-\cos t,\sin t\ra$
 }
-{
-$\vvt = \la 1/10, \sin t, \cos t\ra$, $\vat = \la 0,\cos t, -\sin t \ra$}
+{\begin{enumerate}
+\item $\vvt = \la 1/10, \sin t, \cos t\ra$
+\item $\vat = \la 0,\cos t, -\sin t \ra$
+\item $\vvt \cdot \vat = 0$
+\item The speed is constant.  The speed is $\sqrt{101}/10$.
+\end{enumerate}
+}
 
