--- a/exercises/11_03_exset_01.tex
+++ b/exercises/11_03_exset_01.tex
@@ -1,7 +1,16 @@
 {\noindent In Exercises}
-{ , a position function \vrt\ is given. Find $\vvt$ and $\vat$.
+{ , a position function \vrt\ is given.
+\begin{enumerate}
+\item Find $\vvt$.
+\item Find $\vat$.
+\item Find $\vvt \cdot \vat$.
+\item Is the speed constant?  If so, determine the constant speed.
+\end{enumerate}
 }
 \exinput{exercises/11_03_ex_06}
 \exinput{exercises/11_03_ex_07}
 \exinput{exercises/11_03_ex_08}
 \exinput{exercises/11_03_ex_09}
+\exinput{exercises/11_03_ex_09c}
+\exinput{exercises/11_03_ex_09a}
+\exinput{exercises/11_03_ex_09b}
