--- a/exercises/11_03_ex_06.tex
+++ b/exercises/11_03_ex_06.tex
@@ -1,5 +1,10 @@
 {$\vrt = \la 2t+1, 5t-2, 7\ra$
 }
-{
-$\vvt = \la 2,5,0\ra$, $\vat = \la 0,0,0\ra$}
+{\begin{enumerate}
+\item $\vvt = \la 2,5,0\ra$
+\item $\vat = \la 0,0,0\ra$
+\item $\vvt \cdot \vat = 0$
+\item The speed is constant.  The speed is $\sqrt{29}$.
+\end{enumerate}
+}
 
