Added optional section 6.7 on exploring functions defined as integrals.  (I still need to add exercises for that section.)

--- a/CalculusII.tex
+++ b/CalculusII.tex
@@ -135,7 +135,7 @@
 \addtocounter{keyideacounter}{-1}
 %\setcounterref{examplecounter}{lastexamplecount1}
 %\addtocounter{examplecounter}{-1}
-\setcounter{page}{302}
+\setcounter{page}{304}
 %\thispagestyle{empty}
 
 %\chapter{Integration}\label{chapter:integration}
@@ -165,6 +165,7 @@
 \input{text/06_Hyperbolic_Functions}
 %%\input{text/06_LHopitals_Rule}
 \input{text/06_Improper_Integration}
+\input{text/06_Non-Elementary}
 
 %%\addtocounter{chapter}{6}
 
