--- a/headers/Header_Calculus.tex
+++ b/headers/Header_Calculus.tex
@@ -381,6 +381,11 @@ Notes:
 
 \DeclareMathOperator{\sech}{sech}
 \DeclareMathOperator{\csch}{csch}
+\DeclareMathOperator{\erf}{erf}
+\DeclareMathOperator{\erfc}{erfc}
+\DeclareMathOperator{\erfi}{erfi}
+\DeclareMathOperator{\dilog}{dilog}
+\DeclareMathOperator{\Si}{Si}
 
 \newcommand{\sword}[1]{\textbf{#1}}
 
