--- a/Calculus.tex
+++ b/Calculus.tex
@@ -151,6 +151,7 @@
 \input{text/06_Partial_Fractions}
 \input{text/06_Hyperbolic_Functions}
 \input{text/06_Improper_Integration}
+\input{text/06_Non-Elementary}
 
 %%%\addtocounter{chapter}{6}
 
