--- a/exercises/08_03_exset_01.tex
+++ b/exercises/08_03_exset_01.tex
@@ -1,11 +1,19 @@
 {\noindent In Exercises}
-{, use the Integral Test to determine the convergence of the given series.
+{, use the Integral Test or General $p$--Series Test to determine the convergence of the given series.
 }
 \exinput{exercises/08_03_ex_06}
+\exinput{exercises/08_02_ex_44}
+\exinput{exercises/08_02_ex_45}
 \exinput{exercises/08_03_ex_07}
 \exinput{exercises/08_03_ex_08}
+\exinput{exercises/08_02_ex_40}
+\exinput{exercises/08_03_ex_07a}
+\exinput{exercises/08_03_ex_07b}
 \exinput{exercises/08_03_ex_09}
+\exinput{exercises/08_02_ex_37}
 \exinput{exercises/08_03_ex_10}
+\exinput{exercises/08_02_ex_43}
 \exinput{exercises/08_03_ex_11}
 \exinput{exercises/08_03_ex_12}
+\exinput{exercises/08_03_ex_07c}
 \exinput{exercises/08_03_ex_05}
