--- a/text/08_Alternating_Series.tex
+++ b/text/08_Alternating_Series.tex
@@ -85,12 +85,13 @@ Approximate the sum of the following series, accurate to within $0.001$.\\
 \noindent$\ds 1.\ \sum_{n=1}^\infty (-1)^{n+1}\frac{1}{n^3}\qquad 2.\ \sum_{n=1}^\infty (-1)^{n+1}\frac{\ln n}{n}$.
 }
 {\begin{enumerate}
-	\item  Using Theorem \ref{thm:alt_series_approx}, we want to find $n$ where $1/n^3 < 0.001$:
+	\item  Using Theorem \ref{thm:alt_series_approx} with $\ds a_n=\frac{1}{n^3}$, find $n$ where $\ds a_{n+1} = \frac{1}{(n+1)^3} < 0.001$:
 	\begin{align*}
-	\frac1{n^3} &\leq 0.001=\frac{1}{1000} \\
-	n^3 &\geq 1000\\
-	n &\geq \sqrt[3]{1000}\\
-	n &\geq 10.
+	\frac1{(n+1)^3} &\leq 0.001=\frac{1}{1000} \\
+	(n+1)^3 &\geq 1000\\
+	(n+1) &\geq \sqrt[3]{1000}\\
+	(n+1) &\geq 10\\
+n&\geq 9.
 	\end{align*}
 	Let $L$ be the sum of this series. By Part 1 of the theorem, $|S_9-L|<a_{10} = 1/1000$. We can compute $S_9=0.902116$, which our theorem states is within $0.001$ of the total sum. 
 	
@@ -107,7 +108,7 @@ Approximate the sum of the following series, accurate to within $0.001$.\\
 	%We can arrive at this approximation another way. 
 	%Part 2 of Theorem \ref{thm:alt_series_approx} states that the sum $L$ lies between successive partial sums. It is straightforward to compute $S_6 \approx 0.899782$, $S_7 \approx 0.9027$ and $S_8\approx 0.9007$. We know the sum must lie between these last two partial sums; since they agree to two places after the decimal, we know $L\approx 0.90$. 
 	
-	\item		We want to find $n$ where $\ln (n)/n < 0.001$. We start by solving $\ln (n)/n = 0.001$ for $n$. This cannot be solved algebraically (in terms of elementary functions), so we will use Newton's Method to approximate a solution. 
+	\item		We want to find $n$ where $\ln (n+1)/(n+1) < 0.001$. We start by solving $\ln (n+1)/(n+1) = 0.001$ for $n$. This cannot be solved algebraically (in terms of elementary functions), so we will use Newton's Method to approximate a solution. 
 	
 	Let $f(x) = \ln(x)/x-0.001$; we want to know where $f(x) = 0$. We make a guess that $x$ must be ``large,'' so our initial guess will be $x_1=1000$. Recall how Newton's Method works: given an approximate solution $x_n$, our next approximation $x_{n+1}$ is given by
 	$$x_{n+1} = x_n - \frac{f(x_n)}{\fp(x_n)}.$$
@@ -116,7 +117,7 @@ Approximate the sum of the following series, accurate to within $0.001$.\\
 	x_2 &= 1000 - \frac{\ln(1000)/1000-0.001}{\big(1-\ln(1000)\big)/1000^2} \\
 			&= 2000.
 	\end{align*}
-	Using a computer, we find that Newton's Method seems to converge to a solution $x=9118.01$ after 8 iterations. Taking the next integer higher, we have $n=9119$, where $\ln(9119)/9119 =0.000999903<0.001$.
+	Using a computer, we find that Newton's Method seems to converge to a solution $x=9118.01$ after 8 iterations.  Thus, we need $n+1\geq 9118.01$ to get the guaranteed accuracy. Taking the next integer higher, we have $n+1=9119$, where $\ln(9119)/9119 =0.000999903<0.001$, so use $n=9118$.
 	
 	Again using a computer, we find $S_{9118} = -0.160369$. Part 1 of the theorem states that this is within $0.001$ of the actual sum $L$. Already knowing the 9,119$^\text{th}$ term, we can compute $S_{9119} = -0.159369$, meaning $-0.159369 < L < -0.160369$. 
 	%We again solve for $n$ such that $a_n < 0.0001$; that is, we want $n$ such that $\ln (n)/n <0.0001$. This cannot be solved algebraically, so we approximate the solution using Newton's Method.
@@ -143,7 +144,7 @@ One of the famous results of mathematics is that the Harmonic Series, $\ds \sum_
 \end{enumerate}
 }
 
-\mnote{.8}{\sword{Note:} In Definition \ref{def:abs_converge}, $\ds \sum_{n=1}^\infty a_n$ is not necessarily an alternating series; it just may have some negative terms.}
+\mnote{.54}{\sword{Note:} In Definition \ref{def:abs_converge}, $\ds \sum_{n=1}^\infty a_n$ is not necessarily an alternating series; it just may have some negative terms.}
 
 Thus we say the Alternating Harmonic Series converges conditionally. \\
 
