--- a/text/08_Power_Series.tex
+++ b/text/08_Power_Series.tex
@@ -57,7 +57,7 @@ This raises the question: ``For what values of $x$ will a given power series con
 		%\item	The series converges for all $x$.
 	%\end{enumerate}
 	
-	The value of $R$ is important when understanding a power series, hence it is given a name in the following definition. Also, note that part 2 of Theorem \ref{thm:radius_converge} makes a statement about the interval $(c-R,c+R)$, but the not the endpoints of that interval. A series may/may not converge at these endpoints.
+	The value of $R$ is important when understanding a power series, hence it is given a name in the following definition. Also, note that part 2 of Theorem \ref{thm:radius_converge} makes a statement about the interval $(c-R,c+R)$, but not the endpoints of that interval. A series may/may not converge at these endpoints.
 	
 	\definition{def:radius_converge}{Radius and Interval of Convergence}
 	{  \begin{enumerate}
