Exercises now in optional section 6.7

--- a/text/06_Non-Elementary.tex
+++ b/text/06_Non-Elementary.tex
@@ -297,5 +297,5 @@ Do not let the complexity of integrals discourage you. There is great value in l
 
 
 
-%\printexercises{exercises/06_09_exercises}
+\printexercises{exercises/06_09_exercises}
 
