--- a/exercises/08_08_exercises.tex
+++ b/exercises/08_08_exercises.tex
@@ -5,6 +5,7 @@
 \exsetinput{exercises/08_08_exset_01}
 \exsetinput{exercises/08_08_exset_02}
 \exsetinput{exercises/08_08_exset_03}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/08_08_exset_04}
 \exsetinput{exercises/08_08_exset_06}
 \exsetinput{exercises/08_08_exset_05}
